syntax = "proto3";

import public "google/protobuf/timestamp.proto";
// import public "google/protobuf/any.proto";
// import public "google/protobuf/duration.proto";
// import public "google/protobuf/empty.proto";
// import public "google/protobuf/wrappers.proto";
// import public "google/protobuf/type.proto";
// import public "google/protobuf/api.proto";
// import public "google/protobuf/struct.proto";

package greet;

option csharp_namespace = "GrpcService1";

option go_package = ".;message";

option java_multiple_files = true;

option java_package = "com.xaaef.grpc.lib.domain";


message TokenInfo {

  /**
   * 全局唯一认证 Id
   */
  string tokenId = 1;

  /**
   * 认证授权方式
   * 必须是[ authorization_code | password | client_credentials | tencent_qq | we_chat | sms ]之一！
   */
  string grantType = 2;

  /**
   * 租户ID
   */
  string tenantId = 3;

  /**
   * 客户端信息
   */
  ClientInfo loginClient = 4;

  /**
   * 用户信息
   */
  UserInfo loginUser = 5;

  /**
    * 登录时间
    */
  google.protobuf.Timestamp loginTime = 6;

}


message UserInfo  {

  /**
   * 用户ID
   */
  int64 userId = 1;

  /**
   * 租户ID
   */
  string tenantId = 2;

  /**
   * 头像
   */
  string avatar = 3;

  /**
   * 用户名
   */
  string username = 4;

  /**
   * 手机号
   */
  string mobile = 5;

  /**
   * 邮箱
   */
  string email = 6;

  /**
   * 用户名称
   */
  string nickname = 7;

  /**
   * 密码
   */
  string password = 8;

  /**
   * 性别[ 0.女  1.男  2.未知]
   */
  int32 gender = 9;

  /**
   * 用户类型 0.租户用户 1. 系统用户
   */
  int32 userType = 10;

  /**
   * 所属部门
   */
  int64 deptId = 11;

  /**
   * 状态 【0.禁用 1.正常】
   */
  int32 status = 12;

  /**
   * 是否管理员 0. 普通用户  1. 管理员
   */
  int32 adminFlag = 13;

  /**
   * 过期时间  为空就是永久
   */
  google.protobuf.Timestamp expired = 14;

}


message ClientInfo  {

  /**
   * 客户端 唯一认证 Id
   */
  string clientId = 1;

  /**
   * 租户ID
   */
  string tenantId = 2;

  /**
   * 客户端 密钥
   */
  string secret = 3;

  /**
   * '客户端名称'
   */
  string name = 4;

  /**
   * 客户端 图标
   */
  string logo = 5;

  /**
   * 客户端 描述
   */
  string description = 6;

  /**
   * 客户端类型 [ 0.第三方应用   1.系统内部应用 ]
   */
  int32 clientType = 7;

  /**
   * 授权类型 数组格式
   * 授权类型，必须是[ authorization_code | password | client_credentials | tencent_qq | we_chat | sms ]之一！
   */
  repeated string grantTypes = 8;

  /**
   * 域名地址，如果是 授权码模式， 必须校验回调地址是否属于此域名之下
   */
  string domainName = 9;

  /**
   * 授权作用域
   */
  string scope = 10;

}

