syntax = "proto3";

import public "google/protobuf/timestamp.proto";
import public "google/protobuf/wrappers.proto";
import public "domain.proto";

package com.xaaef;

option csharp_namespace = "GrpcService1";

// go 生成包名 message
option go_package = ".;message";

option java_multiple_files = true;

option java_package = "com.xaaef.grpc.lib.greet";

service Greeter {

  rpc SayHello (HelloRequest) returns (HelloReply);

  rpc GetUserInfo (google.protobuf.StringValue) returns (UserInfo);

}


// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}


// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

